WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134253
REGRESSION(
r170336
): Crash in HTMLMediaElement::seekTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=134253
Summary
REGRESSION(r170336): Crash in HTMLMediaElement::seekTimerFired()
Jer Noble
Reported
2014-06-24 09:51:22 PDT
REGRESSION(
r170336
): Crash in HTMLMediaElement::seekTimerFired()
Attachments
Patch
(1.62 KB, patch)
2014-06-24 09:55 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-06-24 09:55:22 PDT
Created
attachment 233713
[details]
Patch
Jer Noble
Comment 2
2014-06-24 10:05:36 PDT
Committed
r170367
: <
http://trac.webkit.org/changeset/170367
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug